# uade-batalla-naval

./: .gitignore  README.md  menu model.py  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: tests.yaml
tests/: batteship_pygametest.py  menu-improved.py  portada.py  test_helloworld.py  test_match.py  test_suma.py
uade_battleship/: board.py  instrucciones-definitivas.py  instrucciones.py  instructions.py  main.py  main_menu.py  menu-improved.py  portada.py  scoreboard_screen.py  settings.py  ship_placement.py  utils.py
uade_battleship/ai/: cpu_ai.py
uade_battleship/game_board/: game_board.py
uade_battleship/match/: __init__.py  match.py  match_data.py  ship.py
uade_battleship/scoreboard/: Scoreboard.py  __init__.py  scoreboard.py
uade_battleship/ui/: Button.py  TextInput.py  options_menu.py
uade_battleship/utils/: FileStorage.py  Settings.py  __init__.py  colors.py  file_storage.py  settings.py
uade_battleship/views/: MainMenuView.py  __init__.py
