[tool.poetry]
name = "uade-battleship"
version = "0.1.0"
description = ""
authors = ["Brian Valente <brian@valente.com.ar>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pygame = "^2.6.0"
moviepy = "^1.0.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
black = "^24.1.1"
pyright = "^1.1.350"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "uade_battleship.main:main"

[tool.pyright]
include = ["uade_battleship"]
exclude = ["**/node_modules", "**/__pycache__"]
typeCheckingMode = "standard"

reportMissingImports = "error"
reportMissingTypeStubs = false
reportUnknownMemberType = true
reportUnknownVariableType = true
reportUnknownArgumentType = true
reportPrivateUsage = "warning"
reportUntypedFunctionDecorator = "warning"
reportMissingTypeArgument = "warning"
reportInvalidTypeVarUse = "warning"
reportUnnecessaryIsInstance = "warning"
reportUnnecessaryCast = "warning"

pythonVersion = "3.12"
pythonPlatform = "Linux"
